# CUDA-Winograd

./: .gitignore  CMakeLists.txt  Kernel128_one.cu  Kernel128_winograd.cu  Kernel160_winograd.cu  Kernel160_winograd.h  Kernel2560_winograd.cu  Kernel2560_winograd.h  Kernel256_one.cu  Kernel256_winograd.cu  Kernel320_winograd.cu  Kernel320_winograd.h  Kernel_64x64_2560_1280_winograd.cu  Kernel_64x64_2560_1280_winograd.h  Kernel_in2560_out1280_winograd.cu  Kernel_in2560_out1280_winograd.h  Makefile  README.md  Test.c  data_generator.py  util.c  util.h
